--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,311 @@
-*{
-    box-sizing: border-box;
+* {
+	box-sizing: border-box;
 }
 
-html, body{
-    width: 100%;
+html,
+body {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:link {
+	color: black;
+}
+
+a:visited {
+	color: black;
+}
+
+a:hover {
+	color:black;
+	font-weight: bold;
+}
+
+a:active {
+	color: black;
+}
+
+li {
+	list-style: none;
+}
+
+section,
+header,
+footer {
+	width: 100%;
     margin: 0;
     padding: 0;
 }
 
-section {
-    min-height:50vh;
+/* Container */
+.container{
     width: 100%;
-    background-color: #00a9ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-section#welcome-section {
-    min-height:100vh;
+
+/* Navbar Section */
+header {
     width: 100%;
-    background-color: #ffd800;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: #BE3144;
+}
+
+header #navbar{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header #navbar .navbar-brand{
+    margin: 10px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+header #navbar .navbar-links{
+    width: 100%;
+    height: inherit;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+}
+
+.navbar-brand a{
     color: white;
 }
 
-header, footer{
+.navbar-links .navbar-link{
+    padding: 10px;
+    margin: 10px;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: white;
+}
+
+.navbar-link a{
+    color: white;
+}
+
+
+/* Welcome Section */
+#welcome-section {
+	min-height: 100vh;
+	width: 100%;
+    background-color: #218380;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#welcome-section h1{
+    font-size: 3rem;
+    margin:0;
+}
+#welcome-section p{
+    font-size: 2rem;
+}
+#welcome-section a{
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    background-color: #FBB13C;
+    color: #218380;
+}
+
+#welcome-section a:hover{
+    background-color:#BE3144;
+    color: white;
+    transform: scale(1.1);
+}
+
+
+
+#projects{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    min-height:90vh;
+    background-color: #FBB13C;
+}
+
+#projects h1{
+    font-size: 3rem;
+    padding: 10px;
+    color: white;
+    /* border-bottom: 2px solid black; */
+    /* width: 100%; */
+}
+
+#projects .projects-all{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height:5vh;
-    background-color: green;  
+}
+
+.project-tile{
+    height: 50vh;
+    width: 28%;
+    margin: 10px;
+}
+
+.project-tile img{
+    display: block;
+    width: 100%;
+    height: 85%;
+    margin: 0;
+    padding: 0;
+}
+
+.project-tile footer{
+    width: 100%;
+    height: 15%;
+    margin: 0;
+    padding: 0;
+    background-color: #303841;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.project-tile footer a:hover{
+    color: #FBB13C;
+}
+
+a.project-link{
+    text-transform: uppercase;
+    color: white;
+}
+
+/* Profile Section */
+
+#profile *:hover{
+    transform: scale(1.2);
+}
+
+#profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    height: 85vh;
+    background-color: #73D2DE;
+}
+
+#profile h1{
+    font-size: 3rem;
+    margin-bottom: 0;
+}
+
+.fa, .fab{
+    margin: 3px;
+}
+
+.fa-facebook-square{
+    color: #3b5998;
+}
+.fa-instagram-square{
+    color: #e1306c;
+}
+.fa-twitter-square{
+    color: #1da1f2;
+}
+.fa-linkedin{
+    color: #0077b5;
+}
+.fa-github-square{
+    color: #333;
+}
+.fa-free-code-camp{
+    color: #006400;
+}
+
+
+#profile p{
+    font-size: 1.2rem;
+}
+
+/* Footer Section */
+.footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 15vh;
+    background-color:#35334D;
+}
+
+.footer p{
+    font-size: 1rem;
+    color: white;
+    margin: 0;
+}
+
+/* Media  Queries */
+
+@media screen and (max-width:700px){
+    #navbar .navbar-brand{
+        display: none;
+    }
+    header #navbar .navbar-links{
+        justify-content: center;
+    }
+
+    #welcome-section h1{
+        font-size: 2rem;
+    }
+
+    #welcome-section p{
+        font-size: 1.5rem;
+    }
+
+    #welcome-section button{
+        font-size: 1.3rem;
+        padding: 5px 10px;
+    }
+
+    /* Projects Section */
+    #projects h1{
+        font-size: 1.5rem;
+        border-bottom: none;
+    }
+    .project-tile{
+        width: 100%;
+    }
+
+    /* Profile Section */
+    #profile h1{
+        font-size: 2rem;
+    }
+    /* Footer Section */
+    .footer{
+        flex-direction: column;
+        padding: 15px;
+    }
+}
+
+@media screen and (min-width:700px) and (max-width:900px){
+    .project-tile{
+        width:40%
+    }
 }
